Simplify poms 1
Upgrade maven-surefire-plugin 2.22.1 -> 2.22.2
Upgrade maven-jar-plugin 3.1.0 (in ags) to -> 3.2.0 (was in repo)
Upgrade alfresco-maven-plugin 2.1.1 (ags), 3.0.1 (c-pack) -> 4.0.1 (was in e-pack)

swagger-ui.version 3.38  moved to community-repo
stripped out java versions from ags poms
alfresco-maven-plugin removed snapshotToTimestamp as we now use releases in ags
moved project...Encoding to the 2 top level ags poms - did not want to try system wide - too big a change

[ags]